--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
 </head>
 <body>
     <div class="container">
-       <div class="header"></div>
-       <div class="nav-menu"></div>
-       <div class="content"></div>
-       <div class="chat"></div>
+       <div class="header"> header </div>
+       <div class="menu"> nav-menu </div>
+       <div class="content"> content </div>
+       <div class="chat"> chat </div>
     </div>
 </body>
