header elements layout updated

--- a/index.html
+++ b/index.html
@@ -7,7 +7,11 @@
 </head>
 <body>
     <div class="container">
-       <div class="header"> header </div>
+       <div class="header">
+           <div class="search flex-center">Search</div>
+           <div class="nav-menu flex-center">Sub menu</div>
+           <div class="add-new flex-center">Plus</div>
+       </div>
        <div class="menu"> nav-menu </div>
        <div class="content"> content </div>
        <div class="chat"> chat </div>
