organized css files and added seach icon after input

--- a/index.html
+++ b/index.html
@@ -1,14 +1,17 @@
 <!DOCTYPE html>
 <head>
     <meta name="viewport" content="width=device-width,initial-scale=1">
-    <link rel="stylesheet" href="reset.css">
-    <link rel="stylesheet" href="index.css">
+    <link rel="stylesheet" href="assets/css/reset.css">
+    <link rel="stylesheet" href="assets/css/index.css">
     <script>document.write('<script src="http://' + (location.host || 'localhost').split(':')[0] + ':35729/livereload.js?snipver=1"></' + 'script>')</script>
 </head>
 <body>
     <div class="container">
        <div class="header">
-           <div class="search flex-center">Search</div>
+           <div class="search flex-center">
+               <input type="text" placeholder="Search all..."></input>
+               <img class="icon" src="assets/img/magnifying-glass.svg" />
+           </div>
            <div class="nav-menu flex-center">Sub menu</div>
            <div class="add-new flex-center">Plus</div>
        </div>
