--- a/index.html
+++ b/index.html
@@ -1,22 +1,31 @@
 <!DOCTYPE html>
 <head>
-    <meta name="viewport" content="width=device-width,initial-scale=1">
-    <link rel="stylesheet" href="assets/css/reset.css">
-    <link rel="stylesheet" href="assets/css/index.css">
-    <script>document.write('<script src="http://' + (location.host || 'localhost').split(':')[0] + ':35729/livereload.js?snipver=1"></' + 'script>')</script>
+  <meta name="viewport" content="width=device-width,initial-scale=1" />
+  <link rel="stylesheet" href="assets/css/reset.css" />
+  <link rel="stylesheet" href="assets/css/index.css" />
+  <script>
+    document.write(
+      '<script src="http://' +
+        (location.host || "localhost").split(":")[0] +
+        ':35729/livereload.js?snipver=1"></' +
+        "script>"
+    );
+  </script>
 </head>
 <body>
-    <div class="container">
-       <div class="header">
-           <div class="search flex-center">
-               <input type="text" placeholder="Search all..."></input>
-               <img class="icon" src="assets/img/magnifying-glass.svg" />
-           </div>
-           <div class="nav-menu flex-center">Sub menu</div>
-           <div class="add-new flex-center">Plus</div>
-       </div>
-       <div class="menu"> nav-menu </div>
-       <div class="content"> content </div>
-       <div class="chat"> chat </div>
+  <div class="container">
+    <div class="header">
+      <div class="search flex-center">
+        <input type="text" placeholder="Search all..." />
+        <img class="icon" src="assets/img/magnifying-glass.svg" />
+      </div>
+      <div class="nav-menu flex-center">Sub menu</div>
+      <div class="add-new flex-center">
+        <img class="icon-bg" src="assets/img/add.svg" />
+      </div>
     </div>
+    <div class="menu">nav-menu</div>
+    <div class="content">content</div>
+    <div class="chat">chat</div>
+  </div>
 </body>
