--- a/index.html
+++ b/index.html
@@ -19,7 +19,17 @@
         <input type="text" placeholder="Search all..." />
         <img class="icon" src="assets/img/magnifying-glass.svg" />
       </div>
-      <div class="nav-menu flex-center">Sub menu</div>
+      <div class="nav-menu flex-center">
+        <div class="icon-container flex-center">
+          <img class="icon" src="assets/img/comment.svg" />
+        </div>
+        <div class="icon-container flex-center">
+          <img class="icon" src="assets/img/notification.svg" />
+        </div>
+        <div class="icon-container flex-center">
+          <img class="icon" src="assets/img/settings.svg" />
+        </div>
+      </div>
       <div class="add-new flex-center">
         <img class="icon-bg" src="assets/img/add.svg" />
       </div>
