notification badge added

--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
         </div>
         <div class="icon-container flex-center">
           <img class="icon" src="assets/img/notification.svg" />
+          <div class="badge flex-center">5</div>
         </div>
         <div class="icon-container flex-center">
           <img class="icon" src="assets/img/settings.svg" />
