organized the scss files

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
       <div class="heading">
         Main
       </div>
-      <ul class="items">
+      <ul>
         <li class="list-item flex-center">
           <img class="icon" src="assets/img/magnifying-glass.svg" />
           <span>Discover</span>
@@ -75,7 +75,8 @@
       <div class="heading">
         Recent
       </div>
-      <ul class="items">
+
+      <ul>
         <li class="list-item flex-center">
           <img class="icon" src="assets/img/magnifying-glass.svg" />
           <span>Hotels</span>
@@ -100,7 +101,8 @@
       <div class="heading">
         Groups
       </div>
-      <ul class="items">
+
+      <ul>
         <li class="list-item flex-center">
           <div class="colored-circle"></div>
           <span>Celebrities</span>
@@ -122,6 +124,11 @@
     <div class="content">content</div>
 
     <!-- right side chat -->
-    <div class="chat">chat</div>
+    <div class="chat">
+      <div class="search flex-center">
+        <input type="text" placeholder="Chat with..." />
+        <img class="icon" src="assets/img/magnifying-glass.svg" />
+      </div>
+    </div>
   </div>
 </body>
