chat items and indicators added

--- a/index.html
+++ b/index.html
@@ -127,8 +127,92 @@
     <div class="chat">
       <div class="search flex-center">
         <input type="text" placeholder="Chat with..." />
-        <img class="icon" src="assets/img/magnifying-glass.svg" />
+        <img class="icon" src="assets/img/magnifying-glass-gray.svg" />
       </div>
+
+      <div class="heading flex-center">
+        <span>Online (10)</span>
+        <img class="icon" src="assets/img/down-arrow.svg" />
+      </div>
+      <ul>
+        <li class="chat-item flex-center">
+          <img class="avatar" src="assets/img/boy.svg" />
+          <div class="name">ALex Pascal</div>
+          <div class="indicator online"></div>
+        </li>
+        <li class="chat-item flex-center">
+          <img class="avatar" src="assets/img/girl.svg" />
+          <div class="name">Steven Adams</div>
+          <div class="indicator online"></div>
+        </li>
+        <li class="chat-item flex-center">
+          <img class="avatar" src="assets/img/boy.svg" />
+          <div class="name">Keith Valdez Keith Valdez</div>
+          <div class="indicator online"></div>
+        </li>
+        <li class="chat-item flex-center">
+          <img class="avatar" src="assets/img/girl.svg" />
+          <div class="name">Benjamin Vargas</div>
+          <div class="indicator online"></div>
+        </li>
+        <li class="chat-item flex-center">
+          <img class="avatar" src="assets/img/boy.svg" />
+          <div class="name">ALex Pascal</div>
+          <div class="indicator online"></div>
+        </li>
+        <li class="chat-item flex-center">
+          <img class="avatar" src="assets/img/girl.svg" />
+          <div class="name">Steven Adams</div>
+          <div class="indicator online"></div>
+        </li>
+        <li class="chat-item flex-center">
+          <img class="avatar" src="assets/img/boy.svg" />
+          <div class="name">Keith Valdez Keith Valdez</div>
+          <div class="indicator online"></div>
+        </li>
+        <li class="chat-item flex-center">
+          <img class="avatar" src="assets/img/girl.svg" />
+          <div class="name">Benjamin Vargas</div>
+          <div class="indicator online"></div>
+        </li>
+      </ul>
+
+      <div class="heading flex-center">
+        <span>Offline (232)</span>
+        <img class="icon" src="assets/img/down-arrow.svg" />
+      </div>
+      <ul>
+        <li class="chat-item flex-center">
+          <img class="avatar" src="assets/img/boy.svg" />
+          <div class="name">ALex Pascal</div>
+          <div class="indicator offline"></div>
+        </li>
+        <li class="chat-item flex-center">
+          <img class="avatar" src="assets/img/boy.svg" />
+          <div class="name">ALex Pascal</div>
+          <div class="indicator offline"></div>
+        </li>
+        <li class="chat-item flex-center">
+          <img class="avatar" src="assets/img/boy.svg" />
+          <div class="name">ALex Pascal</div>
+          <div class="indicator offline"></div>
+        </li>
+        <li class="chat-item flex-center">
+          <img class="avatar" src="assets/img/boy.svg" />
+          <div class="name">ALex Pascal</div>
+          <div class="indicator offline"></div>
+        </li>
+        <li class="chat-item flex-center">
+          <img class="avatar" src="assets/img/boy.svg" />
+          <div class="name">ALex Pascal</div>
+          <div class="indicator offline"></div>
+        </li>
+        <li class="chat-item flex-center">
+          <img class="avatar" src="assets/img/boy.svg" />
+          <div class="name">ALex Pascal</div>
+          <div class="indicator offline"></div>
+        </li>
+      </ul>
     </div>
   </div>
 </body>
