--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
         </div>
       </div>
       <div class="add-new flex-center">
-        <img class="icon-bg" src="assets/img/add.svg" />
+        <img class="icon-lg" src="assets/img/add.svg" />
       </div>
     </div>
     <!-- left side fixed menu -->
@@ -121,7 +121,30 @@
     </div>
 
     <!-- Main content -->
-    <div class="content">content</div>
+    <div class="content">
+      <div class="box create-post">
+        <textarea
+          placeholder="Write Something..."
+          rows="3"
+          cols="45"
+        ></textarea>
+        <div class="create-options">
+          <div class="options flex-center">
+            <img class="icon-md" src="assets/img/magnifying-glass-black.svg" />
+            <img class="icon-md" src="assets/img/comment-black.svg" />
+            <img class="icon-md" src="assets/img/notification-black.svg" />
+            <img class="icon-md" src="assets/img/settings-black.svg" />
+          </div>
+          <button class="btn">
+            SEND
+          </button>
+        </div>
+      </div>
+      <div class="box">2</div>
+      <div class="box">3</div>
+      <div class="box">4</div>
+      <div class="box">5</div>
+    </div>
 
     <!-- right side chat -->
     <div class="chat">
