extra chat list item added

--- a/index.html
+++ b/index.html
@@ -235,6 +235,21 @@
           <div class="name">ALex Pascal</div>
           <div class="indicator offline"></div>
         </li>
+        <li class="chat-item flex-center">
+          <img class="avatar" src="assets/img/boy.svg" />
+          <div class="name">ALex Pascal</div>
+          <div class="indicator offline"></div>
+        </li>
+        <li class="chat-item flex-center">
+          <img class="avatar" src="assets/img/boy.svg" />
+          <div class="name">ALex Pascal</div>
+          <div class="indicator offline"></div>
+        </li>
+        <li class="chat-item flex-center">
+          <img class="avatar" src="assets/img/boy.svg" />
+          <div class="name">ALex Pascal</div>
+          <div class="indicator offline"></div>
+        </li>
       </ul>
     </div>
   </div>
